--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         <h3>Personal Portfolio (this site)</h3>
                         <p>Responsive portfolio using HTML, CSS and JS. Includes theme toggle and gallery.</p>
                         <div class="project-actions">
-                            <a href="#" class="btn btn-primary">Live</a>
-                            <a href="#" class="btn btn-outline">Code</a>
+                            <a href="#https://personal-portfoliobyhritik.netlify.app" class="btn btn-primary">Live</a>
+                            <a href="#https://github.com/devhritik03/portfolio.git" class="btn btn-outline">Code</a>
                         </div>
                     </article>
                     <article class="project-card">
@@ -182,3 +182,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
