--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
                         <h3>Personal Portfolio (this site)</h3>
                         <p>Responsive portfolio using HTML, CSS and JS. Includes theme toggle and gallery.</p>
                         <div class="project-actions">
-                            <a href="#https://personal-portfoliobyhritik.netlify.app" class="btn btn-primary">Live</a>
-                            <a href="#https://github.com/devhritik03/portfolio" class="btn btn-outline">Code</a>
+                            <a href="#https://personal-portfoliobyhritik.netlify.app/" class="btn btn-primary">Live</a>
+                            <a href="#https://github.com/devhritik03/portfolio/" class="btn btn-outline">Code</a>
                         </div>
                     </article>
                     <article class="project-card">
                         <div class="project-tag">Practice</div>
                         <h3>Simple Calculator</h3>
                         <p>A small JS calculator to practice DOM & logic.</p>
-                        <div class="project-actions"><a class="btn btn-primary" href="#https://calculatorbyhritik.netlify.app">Code</a></div>
+                        <div class="project-actions"><a class="btn btn-primary" href="https://calculatorbyhritik.netlify.app/">Code</a></div>
                     </article>
                     <article class="project-card">
                         <div class="project-tag">Design</div>
@@ -182,5 +182,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
