--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <p>Responsive portfolio using HTML, CSS and JS. Includes theme toggle and gallery.</p>
                         <div class="project-actions">
                             <a href="#https://personal-portfoliobyhritik.netlify.app/" class="btn btn-primary">Live</a>
-                            <a href="#https://github.com/devhritik03/portfolio/" class="btn btn-outline">Code</a>
+                            <a href="https://github.com/devhritik03/portfolio.git/" class="btn btn-outline">Code</a>
                         </div>
                     </article>
                     <article class="project-card">
@@ -182,6 +182,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
